deployments/nodejs-app-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodejs-app
  labels:
    name: nodejs-app
    app: nodejs-app-dev
